--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGO_URL="mongodb://localhost:27017"
-DB_NAME="fraud_detection_db"
-CORS_ORIGINS="*"
-JWT_SECRET="change-this-to-a-secure-random-string-in-production"
+MONGO_URL=mongodb://localhost:27017
+DB_NAME=upi_fraud
+JWT_SECRET=supersecret
+DEV_UPLOAD_ENABLED=true
