--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,11 @@
-REACT_APP_BACKEND_URL=https://securitywatchdog.preview.emergentagent.com
-WDS_SOCKET_PORT=443
+REACT_APP_BACKEND_URL=http://127.0.0.1:8000
 REACT_APP_ENABLE_VISUAL_EDITS=false
 ENABLE_HEALTH_CHECK=false
+# from repo root
+Set-Content -Path .\backend\.env -Value @"
+MONGO_URL="mongodb+srv://app_user:YourRealPassword@your-real-cluster.mongodb.net/?retryWrites=true&w=majority"
+DB_NAME="fraud_detection_db"
+CORS_ORIGINS="http://localhost:3000"
+JWT_SECRET="change-this-in-production"
+DEV_UPLOAD_ENABLED="true"
+"@
